user menu and new entity's